# CipherStamp

./: .gitignore  README.md  package.json  receiver_store.json  sender_store.json  tsconfig.json
docs/: api.md
server/: Cargo.toml
server/src/: main.rs
src/: receiver.ts  sender.ts  timestampCiphertext.ts  validator.ts  validatorAgent.ts
test/: receiver.test.ts  runAll.ts  sender.test.ts  timestampCiphertext.test.ts  validator.test.ts
web/: receiver.html  sender.html  validator.html
