[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.22"
xeddsa = "1.0.2"

[dev-dependencies]
rand = "0.8"
x25519-dalek = "2"
